fix some layout bugs caused by the new route page header and flexbox

--- a/app/component/route/route.scss
+++ b/app/component/route/route.scss
@@ -1,6 +1,6 @@
 $route-header-height: 65px;
 $route-list-header-height: 26px;
-$route-schedule-date-height: 42px;
+$route-schedule-date-height: 36px;
 
 $route-header-favourite-icon-stroke-color: $light-gray;
 $route-header-favourite-icon-fill-color: $background-color;
@@ -254,6 +254,10 @@ $route-header-favourite-icon-selected-hover-stroke-color: $white;
   flex: 1;
   display: flex;
   flex-direction: column;
+
+  .route-schedule-header {
+    min-height: 52px;
+  }
 }
 
 .route-schedule-list {
@@ -335,9 +339,9 @@ $route-header-favourite-icon-selected-hover-stroke-color: $white;
 .route-schedule-date {
   @include font-book;
 
-  height: $route-schedule-date-height;
+  min-height: $route-schedule-date-height;
   background-color: #eef1f3;
-  padding: 8px 15px 10px;
+  padding: 0 15px;
   margin: 0;
 
   .icon {
@@ -457,13 +461,13 @@ div.route-tabs {
   padding: 10px;
   background-color: #eef1f3;
   position: relative;
+  min-height: 60px;
 
   select {
     padding: 10px;
     height: 40px;
     border-radius: $border-radius;
     border: 1px solid $light-gray;
-    margin-bottom: 20px;
     font-weight: bold;
   }
   .icon {
